--- a/src/app/content/shop/one-product/one-product.component.html
+++ b/src/app/content/shop/one-product/one-product.component.html
@@ -1,114 +1,119 @@
-<div *ngIf="!isLoading" class="popup" [class.modal_open]="popUp">
-    <img [src]="product.img" [alt]="product.name">
-    <div class="close-popup" (click)="popUpSwitcher()"></div>
-</div>
-<div class="overlay" [class.modal_open]="popUp" (click)="popUpSwitcher()">
-</div>
-<div class="back-link_wrapper">
-    <i class="fa fa-chevron-circle-left fa-3x back-link_fa" onclick="history.back(); return false;"></i>
-    <a class="back-link" onclick="history.back(); return false;">назад</a>
-    <svg onclick="history.back(); return false;" class="arrow-svg" width="60" height="8" viewBox="0 0 60 8" fill="black"
-         xmlns="http://www.w3.org/2000/svg">
-        <path opacity="0.75"
-              d="M0.646446 3.64644C0.451183 3.8417 0.451183 4.15829 0.646446 4.35355L3.82843 7.53553C4.02369 7.73079 4.34027 7.73079 4.53553 7.53553C4.7308 7.34027 4.7308 7.02368 4.53553 6.82842L1.70711 3.99999L4.53553 1.17157C4.7308 0.976306 4.7308 0.659723 4.53553 0.464461C4.34027 0.269199 4.02369 0.269199 3.82843 0.464461L0.646446 3.64644ZM60 3.5L1 3.49999L1 4.49999L60 4.5L60 3.5Z"
-              fill="white"/>
-    </svg>
-</div>
-<div class="product-card__wrapper" *ngIf="!isLoading">
-    <div class="product-card__left">
-        <div class="product-card__img">
-            <img id="productImg" [src]="product.img" [alt]="product.name" (click)="popUpSwitcher()">
-        </div>
+<div class="one_product__wrapper">
+    <div *ngIf="!isLoading" class="popup" [class.modal_open]="popUp">
+        <img [src]="product.img" [alt]="product.name">
+        <div class="close-popup" (click)="popUpSwitcher()"></div>
     </div>
-    <div class="product-card__right">
-        <div class="product-card__name" id="productName">{{product.name}}</div>
-        <div class="product-card__description">
+    <div class="overlay" [class.modal_open]="popUp" (click)="popUpSwitcher()">
+    </div>
+    <div class="back-link_wrapper">
+        <i class="fa fa-chevron-circle-left fa-3x back-link_fa" onclick="history.back(); return false;"></i>
+        <a class="back-link" onclick="history.back(); return false;">назад</a>
+        <svg onclick="history.back(); return false;" class="arrow-svg" width="60" height="8" viewBox="0 0 60 8"
+             fill="black"
+             xmlns="http://www.w3.org/2000/svg">
+            <path opacity="0.75"
+                  d="M0.646446 3.64644C0.451183 3.8417 0.451183 4.15829 0.646446 4.35355L3.82843 7.53553C4.02369 7.73079 4.34027 7.73079 4.53553 7.53553C4.7308 7.34027 4.7308 7.02368 4.53553 6.82842L1.70711 3.99999L4.53553 1.17157C4.7308 0.976306 4.7308 0.659723 4.53553 0.464461C4.34027 0.269199 4.02369 0.269199 3.82843 0.464461L0.646446 3.64644ZM60 3.5L1 3.49999L1 4.49999L60 4.5L60 3.5Z"
+                  fill="white"/>
+        </svg>
+    </div>
+    <div class="product-card__wrapper" *ngIf="!isLoading">
+        <div class="product-card__left">
+            <div class="product-card__img">
+                <img id="productImg" [src]="product.img" [alt]="product.name" (click)="popUpSwitcher()">
+            </div>
+        </div>
+        <div class="product-card__right">
+            <div class="product-card__name" id="productName">{{product.name}}</div>
+            <div class="product-card__description">
             <span class="product-card__small-text">Описание:
 &nbsp;</span>
-            <span id="productDesc">{{product.description}}</span>
-        </div>
-        <div class="product-card__size" *ngIf="product.diameter">
+                <span id="productDesc">{{product.description}}</span>
+            </div>
+            <div class="product-card__size" *ngIf="product.diameter">
             <span class="product-card__small-text">Диаметр:
 &nbsp;</span>
-            <span id="productSize">{{product.diameter}}
-                &nbsp;см</span>
-        </div>
-        <div class="product-card__prices">
+                <span id="productSize">{{product.diameter}}
+                    &nbsp;см</span>
+            </div>
+            <div class="product-card__prices">
             <span class="product-card__small-text">Цена:
 &nbsp;</span>
-            <span id="productPrice">{{product.price}}
-                &nbsp;грн</span>
-        </div>
-        <div class="orderText-shop">
-            <div class="card-buttons_wrapper">
-                <button type="submit" class="cart-button" (click)="addProductToCart(product)">Добавить в корзину
-                </button>
-                <button type="submit" class="cart-button" (click)="modalSwitcher()">Купить в один клик</button>
-                <div class="product-card__quantity">
-                    <p *ngIf="productLine && productLine.quantity > 0" class="product-card__quantity">товара в
-                        корзине: {{productLine.quantity}}
-                    </p>
+                <span id="productPrice">{{product.price}}
+                    &nbsp;грн</span>
+            </div>
+            <div class="orderText-shop">
+                <div class="card-buttons_wrapper">
+                    <button type="submit" class="cart-button orange_btn" (click)="addProductToCart(product)">Добавить в
+                        корзину
+                    </button>
+                    <button type="submit" class="cart-button" (click)="modalSwitcher()">Купить в один клик</button>
+                    <div class="product-card__quantity">
+                        <p *ngIf="productLine && productLine.quantity > 0" class="product-card__quantity">товара в
+                            корзине: {{productLine.quantity}}
+                        </p>
+                    </div>
+                </div>
+                <span>*</span>
+                <span>Примечание: уважаемый посетитель, учитывая сезонность растений, использованных в букетах, внешний вид и компоновка товара может несколько отличаться от фотографий на сайте.</span>
+                <div class="consultation consultation-wrapper">
+                    <div class="consultation_popup-overlay" (click)="modalSwitcher()" [class.modal_open]="class"></div>
+                    <!-- //оверлей - отображение формы на затемненном фоне -->
+                    <div class="consultation_popWindow consultation_subscribe_window" [class.modal_open]="class">
+                        <!-- //основное окно формы Подписки -->
+                        <p class="consultation_subcsribe-text">Оставьте ваши данные и мы свяжемся с вами в
+                            ближайшее время</p>
+                        <form novalidate #form="ngForm" (ngSubmit)="sendEmail(form)"
+                              class="consultation_subscribe-form">
+                            <div>
+                                <input type="text"
+                                       id="name-contact"
+                                       placeholder="Имя"
+                                       name="username"
+                                       [(ngModel)]="username"
+                                       #name="ngModel"
+                                       required>
+                                <span class="star_req_form"> *</span>
+                                <ul class="form_error_message"
+                                    *ngIf="name.touched && name.invalid || loading && name.invalid">
+                                    <li *ngIf="name.errors.required">
+                                        Введите имя
+                                    </li>
+                                </ul>
+                            </div>
+                            <div>
+                                <input [(ngModel)]="phonenumber"
+                                       #phone="ngModel"
+                                       type='tel'
+                                       prefix="+38"
+                                       mask="(000) 000 00 00"
+                                       [showMaskTyped]="true"
+                                       id="tel-contact"
+                                       name="tel"
+                                       required
+                                       minlength="10"
+                                >
+                                <span class="star_req_form"> *</span>
+                                <ul class="form_error_message"
+                                    *ngIf="phone.touched && phone.invalid || loading && phone.invalid">
+                                    <li *ngIf="phone.errors.required || phone.errors.minlength">
+                                        Укажите телефон
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="consultation_aligncenter">
+                                <button [disabled]="form.invalid && loading"
+                                        type="submit"
+                                        class="consultation_btn">
+                                    <i *ngIf="messageSent" class="fa fa-check" aria-hidden="true"
+                                       style="color: #89e100"></i> {{buttonText}}
+                                </button>
+                            </div>
+                        </form>
+                        <div class="consultation_close-btn" (click)="modalSwitcher()">&times;</div>
+                    </div>
                 </div>
             </div>
-            <span>*</span>
-            <span>Примечание: уважаемый посетитель, учитывая сезонность растений, использованных в букетах, внешний вид и компоновка товара может несколько отличаться от фотографий на сайте.</span>
-            <div class="consultation consultation-wrapper">
-                <div class="consultation_popup-overlay" (click)="modalSwitcher()" [class.modal_open]="class"></div>
-                <!-- //оверлей - отображение формы на затемненном фоне -->
-                <div class="consultation_popWindow consultation_subscribe_window" [class.modal_open]="class">
-                    <!-- //основное окно формы Подписки -->
-                    <p class="consultation_subcsribe-text">Оставьте ваши данные и мы свяжемся с вами в
-                        ближайшее время</p>
-                    <form novalidate #form="ngForm" (ngSubmit)="sendEmail(form)" class="consultation_subscribe-form">
-                        <div>
-                            <input type="text"
-                                   id="name-contact"
-                                   placeholder="Имя"
-                                   name="username"
-                                   [(ngModel)]="username"
-                                   #name="ngModel"
-                                   required>
-                            <span class="star_req_form"> *</span>
-                            <ul class="form_error_message"
-                                *ngIf="name.touched && name.invalid || loading && name.invalid">
-                                <li *ngIf="name.errors.required">
-                                    Введите имя
-                                </li>
-                            </ul>
-                        </div>
-                        <div>
-                            <input [(ngModel)]="phonenumber"
-                                   #phone="ngModel"
-                                   type='tel'
-                                   prefix="+38"
-                                   mask="(000) 000 00 00"
-                                   [showMaskTyped]="true"
-                                   id="tel-contact"
-                                   name="tel"
-                                   required
-                                   minlength="10"
-                            >
-                            <span class="star_req_form"> *</span>
-                            <ul class="form_error_message"
-                                *ngIf="phone.touched && phone.invalid || loading && phone.invalid">
-                                <li *ngIf="phone.errors.required || phone.errors.minlength">
-                                    Укажите телефон
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="consultation_aligncenter">
-                            <button [disabled]="form.invalid && loading"
-                                    type="submit"
-                                    class="consultation_btn">
-                                <i *ngIf="messageSent" class="fa fa-check" aria-hidden="true"
-                                   style="color: #89e100"></i> {{buttonText}}
-                            </button>
-                        </div>
-                    </form>
-                    <div class="consultation_close-btn" (click)="modalSwitcher()">&times;</div>
-                </div>
-            </div>
+            <!--<div class="product-card__btn btn-shop-only"><button type="submit" class="product-button-buy">Купить</button></div></div>-->
         </div>
-        <!--<div class="product-card__btn btn-shop-only"><button type="submit" class="product-button-buy">Купить</button></div></div>-->
     </div>
 </div>
