--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,5 @@
 <section class="main_page_section" >
+  <button class='btn_main lined thin' [routerLink]="['category', 'shop']">в магазин</button>
   <div id="video" *responsive="{sizes:{min:992}}">
     <video id="videoHero"[muted]="'muted'" autoplay loop>
     <source src="./assets/images/main/main.mp4" type="video/mp4">
