--- a/src/app/content/about/about.component.html
+++ b/src/app/content/about/about.component.html
@@ -8,7 +8,7 @@
             </div>
             <div class="contact-info">
                 <div class="contact-info_box"><p>Телефон:</p>
-                    <p>095-697-95-20</p></div>
+                    <p><a class="navbar-phone navLink" href="tel:+380956979520">095-697-95-20</a></p></div>
                 <div class="contact-info_box"><p>Режим работы:</p>
                     <p>10:00 - 20:00</p></div>
                 <div class="contact-info_box"><p>Адрес:</p>
